# CapstoneDesign

docs/: architecture.md  hardware.md  protocol.md
firmware/esp32-p4/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32-p4
firmware/esp32-p4/components/mlx90640/: CMakeLists.txt  MLX90640_I2C_Driver.c
firmware/esp32-p4/components/mlx90640/include/: MLX90640_I2C_Driver.h
firmware/esp32-p4/src/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
firmware/esp32-p4/src/camera/: camera_board_config.h  camera_capture.c  camera_capture.h
firmware/esp32-p4/src/network/: http_camera_server.c  http_camera_server.h  wifi_credentials.h  wifi_station.c  wifi_station.h
firmware/esp32-p4/src/thermal/: thermal_config.h  thermal_task.c  thermal_task.h
firmware/esp32-p4/tools/: patch_esp_ipa.py
laptop/: README.md  pyproject.toml
laptop/src/machine_vision_client/: config.py  heat_algorithm.py  main.py  materials.py  risk.py  thermal.py  재료별_불연성_가연성_발화점_참고표.xlsx
laptop/src/machine_vision_client/comms/: esp32_client.py  protocol.py
laptop/src/machine_vision_client/ui/: debug_viewer.py
laptop/src/machine_vision_client/video/: thermal_stream.py  visible_stream.py
laptop/src/machine_vision_client/vision/: pipeline.py
laptop/tests/: test_http_thermal_source.py
shared/examples/: ack.json  command_control.json  emergency_stop.json  hello.json  status.json
shared/protocol/: README.md  messages.schema.json
tools/: run_laptop.sh
